[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/212521.jpg" type="Texture" id=2]
[ext_resource path="res://assets/MANDIOCA (1).png" type="Texture" id=3]
[ext_resource path="res://assets/Start-button-icon-on-transparent-background-PNG-PhotoRoom.png-PhotoRoom.png" type="Texture" id=4]
[ext_resource path="res://assets/silvio_lindo.png" type="Texture" id=5]
[ext_resource path="res://assets/Valendo 1 m.png" type="Texture" id=6]
[ext_resource path="res://assets/Valendo 1 m (1).png" type="Texture" id=7]
[ext_resource path="res://assets/perdeu.png" type="Texture" id=8]
[ext_resource path="res://assets/red-line-png-0.png" type="Texture" id=9]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="fundo1" type="Sprite" parent="."]
position = Vector2( 515, 300 )
scale = Vector2( 1.05714, 1.38747 )
texture = ExtResource( 2 )

[node name="mandioca" type="Sprite" parent="."]
position = Vector2( 618.696, 364.3 )
scale = Vector2( 0.103441, 0.0783333 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 100.0
margin_top = 441.0
margin_right = 199.0
margin_bottom = 539.0
icon = ExtResource( 4 )
expand_icon = true

[node name="SilvioLindo" type="Sprite" parent="."]
position = Vector2( 520, 301 )
scale = Vector2( 0.937043, 0.786458 )
texture = ExtResource( 5 )

[node name="Valendo1M" type="Sprite" parent="SilvioLindo"]
position = Vector2( -294.807, 303.894 )
scale = Vector2( 0.274843, 0.130887 )
texture = ExtResource( 6 )

[node name="pergunta" type="Sprite" parent="."]
position = Vector2( 242.5, 189.5 )
scale = Vector2( 0.254688, 0.115741 )
texture = ExtResource( 7 )

[node name="linha1" type="Sprite" parent="."]
position = Vector2( 279, 244 )
scale = Vector2( 0.35, 1.54529 )
texture = ExtResource( 9 )

[node name="linha2" type="Sprite" parent="."]
position = Vector2( 286, 189 )
scale = Vector2( 0.35, 1.54529 )
texture = ExtResource( 9 )

[node name="linha3" type="Sprite" parent="."]
position = Vector2( 284, 305 )
scale = Vector2( 0.35, 1.54529 )
texture = ExtResource( 9 )

[node name="linha4" type="Sprite" parent="."]
position = Vector2( 280, 358 )
scale = Vector2( 0.35, 1.54529 )
texture = ExtResource( 9 )

[node name="Button2" type="Button" parent="."]
margin_left = 120.0
margin_top = 263.0
margin_right = 440.0
margin_bottom = 296.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Reparar o chamado DNA lixo"

[node name="Button3" type="Button" parent="."]
margin_left = 119.0
margin_top = 318.0
margin_right = 439.0
margin_bottom = 351.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Reorganizar partes sem importancia do DNA"

[node name="Button4" type="Button" parent="."]
margin_left = 119.0
margin_top = 376.0
margin_right = 439.0
margin_bottom = 409.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Notificar o RNA mensageiro sobre qualquer problema estrutural"

[node name="Button5" type="Button" parent="."]
margin_left = 118.0
margin_top = 433.0
margin_right = 438.0
margin_bottom = 466.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Editar os escudos do DNA"

[node name="Perdeu" type="Sprite" parent="."]
visible = false
position = Vector2( 510, 300.5 )
scale = Vector2( 4.57778, 2.69778 )
texture = ExtResource( 8 )

[node name="Button6" type="Button" parent="."]
visible = false
margin_left = 401.0
margin_top = 471.0
margin_right = 478.0
margin_bottom = 491.0
rect_scale = Vector2( 3, 4 )
text = "REINICIAR"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
